v3.6.6 (XXXX-XX-XX)
-------------------

* Fixed BTS-167: Lingering Queries - Canceled from the UI.
  This fixes queries not vanishing from the list of running queries in the web
  UI in case the query was canceled using the "Cancel" button in web UI's query
  editor.

* Fixed bad behaviour in agency supervision in some corner cases involving
  already resigned leaders in Current.

* Fixed internal issue #748: Fixed reading of primary sort values for late
  materialization (of ArangoSearch views).

* Make AQL user-defined functions (UDFs) work in a cluster in case the UDF runs
  an AQL query inside its own function code (BTS-159).

* Fixed issue ES-664: the optimizer rule `inline-subqueries` must not pull out
  subqueries that contain a COLLECT statement if the subquery is itself called
  from within a loop. Otherwise the COLLECT will be applied to the values in the
  outer FOR loop, which can produce a different result.

* Updated arangosync to 0.7.9.

* Fixed hotbackup S3 credentials validation and error reporting for upload
  and download (BTS-162).

* Fix: The 'sorted' COLLECT variant would return undefined instead of null when
  grouping by a null value.

* Fix: writeConcern is now honored correctly (ES-655).

* Fixed internal issue #739: ArangoSearch filter volatility takes into account
  calculation nodes dependencies.

* Slightly fixed wrong log level for authentication and also added login event
  to the standard log.

* Fixed OASIS-278 issue: Added proper sort/calc nodes cleanup for late
  materialzation after OneShard optimization.

* Fixed a blockage on hotbackup when writes are happening concurrently, since
  followers could no longer replicate leader transactions.

* Fixed issue #12349: arangosh compact Arangoerror 404.

* Always fetch data for /_api/cluster/agency-dump from leader of the agency.
  Add option "redirectToLeader=true" to internal /_api/agency/state API.

* Fixed issue #12297: ArangoDB 3.6.5 Swagger Error?